Linked collection having mesh with shape keys resets if the original file is updated #105889

Closed
opened 2023-03-18 22:49:36 +01:00 by ScarsTRF · 5 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.18

Blender Version
Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: rB55485cb379f7
Worked: (newest version of Blender that worked as expected)

Short description of error
Suppose a collection is linked to other file which has a mesh with shape-key data.
Override these shape-key data in new file and change shape-key values in new file (say 0.6).

If we add a new object to the collection in the library file then reopen the project file, shape key value is 0 instead of 0.6

If we delete this new object from the collection of library file and reopen the project file, shape key value is again set to 0.6

Exact steps for others to reproduce the error

  1. Make a mesh that has multiple or even 1 shape key on that mesh and save the file (see link-file.blend).
  2. Import the collection containing the mesh and override it within another file.
  3. Change any shape key value (save this project file)
  4. Open link-file.blend and add another object to the collection.
  5. Go back to the project file and you'll see that the shape keys you've modified have been reset to file defaults.

Check Video for detailed reproduction steps

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 531.18 **Blender Version** Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: `rB55485cb379f7` Worked: (newest version of Blender that worked as expected) **Short description of error** Suppose a collection is linked to other file which has a mesh with shape-key data. Override these shape-key data in new file and change shape-key values in new file (say 0.6). If we add a new object to the collection in the library file then reopen the project file, shape key value is 0 instead of 0.6 If we delete this new object from the collection of library file and reopen the project file, shape key value is again set to 0.6 **Exact steps for others to reproduce the error** 1. Make a mesh that has multiple or even 1 shape key on that mesh and save the file (see `link-file.blend`). 2. Import the collection containing the mesh and override it within another file. 3. Change any shape key value (save this project file) 4. Open `link-file.blend` and add another object to the collection. 5. Go back to the project file and you'll see that the shape keys you've modified have been reset to file defaults. [Check Video for detailed reproduction steps](https://projects.blender.org/attachments/690be659-d72b-4c70-adec-add6e8156aec)
ScarsTRF added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-03-18 22:49:37 +01:00
Member

Hi, thanks for the report. Some part of the report is not clear yet.
Did you link the object from asset library or File > Link?

override the shape keys within another file.

Did you make any changes in shape keys after overriding the object?

modify anything in there either it being just adding another object or collection or something.

So in asset file, you're not editing shape key data, right?

you'll see that the shape keys you've modified have been reset to file defaults.

If no changes have been made to shape keys then aint they expected to be in default state?
I might have misunderstood the report. Could you share a screen recording to help in understanding the issue?

Hi, thanks for the report. Some part of the report is not clear yet. Did you link the object from asset library or `File > Link`? > override the shape keys within another file. Did you make any changes in shape keys after overriding the object? > modify anything in there either it being just adding another object or collection or something. So in asset file, you're not editing shape key data, right? > you'll see that the shape keys you've modified have been reset to file defaults. If no changes have been made to shape keys then aint they expected to be in default state? I might have misunderstood the report. Could you share a screen recording to help in understanding the issue?
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-03-19 05:59:19 +01:00
Author

Did you link the object from asset library or File > Link?

Yes, though with Asset Library, make sure that you use link instead of append.

Did you make any changes in shape keys after overriding the object?

In the asset file where it's linked from, no. In the project file, Yes

So in asset file, you're not editing shape key data, right?

Only thing that is ever done is either something is being moved or added to the asset.

If no changes have been made to shape keys then aint they expected to be in default state?

The shape keys in the project file are changed while the asset file is not, when loading the project file AFTER editing the asset file, all shape keys revert even though they are overriden while stuff like TRS data stay the same for objects and armatures

I have a recording from start to finish of a new "Asset" and "Project" to possibly explain a little more.

> Did you link the object from asset library or File > Link? Yes, though with Asset Library, make sure that you use link instead of append. > Did you make any changes in shape keys after overriding the object? In the asset file where it's linked from, no. In the project file, Yes > So in asset file, you're not editing shape key data, right? Only thing that is ever done is either something is being moved or added to the asset. > If no changes have been made to shape keys then aint they expected to be in default state? The shape keys in the project file are changed while the asset file is not, when loading the project file AFTER editing the asset file, all shape keys revert even though they are overriden while stuff like TRS data stay the same for objects and armatures I have a recording from start to finish of a new "Asset" and "Project" to possibly explain a little more.
Author

I do wanna state after multiple testing points, stuff like values on custom properties and other properties on a object/Armature don't change after effecting the asset file, so it's only the Shape Keys as of what I can see now which if you have some changes on those keys, they all get fully reset to the file defaults even deleting keyframes or drivers assigned to shape keys.

I do wanna state after multiple testing points, stuff like values on custom properties and other properties on a object/Armature don't change after effecting the asset file, so it's only the Shape Keys as of what I can see now which if you have some changes on those keys, they all get fully reset to the file defaults even deleting keyframes or drivers assigned to shape keys.
Member

Hi, thanks for the information. I can confirm when collection is linked instead of the object having the shape key data.

Hi, thanks for the information. I can confirm when collection is linked instead of the object having the shape key data.
Pratik Borhade changed title from Linked meshes with shape key overrides reset if the original file was updated in any way to Linked collection having mesh with shape keys resets if the original file is updated 2023-03-23 11:46:40 +01:00

Would bet that the 'resync' process triggered by the changes to the linked collection is the culprit here...

Would bet that the 'resync' process triggered by the changes to the linked collection is the culprit here...
Bastien Montagne added
Type
Bug
and removed
Type
Report
labels 2023-04-18 15:14:17 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-23 15:08:06 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105889
No description provided.