Fix #105889: LibOverride: Overrides of shape keys reset on resync.

The usual special ShapeKey case needs yet another extra corner case
special handling... See comments in code for details about that specific
issue.

NOTE: May be worth checking if this can be backported to 3.3 LTS too.